# endurox

./: .gitignore  .project  CMakeLists.txt  INSTALL  LICENSE  README  README.md
atmitest/: CMakeLists.txt  TODO  ULOG.20180713  atmiuni1.h  atmiunit1.c  dom1.sh  dom2.sh  dom3.sh  run-until-fail.sh  run.sh  test_server.c  testenv.sh
bridge/: CMakeLists.txt  bridge.h  bridgesvc.c  brutils.c  clock.c  gpgme_encrypt.c  gpgme_encrypt.h  net_in.c  network.c  queue.c  rawmain_fpa.c  tempq.c
cconfsrv/: CMakeLists.txt  Makefile  cconfsv.c  cconfsv.h
cpmsrv/: CMakeLists.txt  cltconfig.c  cltexec.c  cpmshm.c  cpmsrv.c  cpmsrv.h  rawmain.c
doc/: CMakeLists.txt  GettingStartedTutorial.adoc  aix_notes.adoc  benchmark.adoc  building_guide.adoc  building_guide.txt  class_diagram.dia  cluster_detail.dia  cluster_links_center.dia  cluster_links_mix.dia  cluster_links_nocentre.dia  common_config.dia  common_configuration.adoc  endurox_overview.dia  epoll_message_dispatch_mode.dia  event_processing.dia  ex_adminman.adoc  ex_adminman.txt  ex_adminman_failover.drawio  ex_adminman_failover_hw.drawio  ex_adminman_snmp_multinode.drawio  ex_devguide.adoc  ex_devguide.txt  ex_netproto.adoc  ex_netproto_envelope.drawio  ex_netproto_msgexample.drawio  ex_netproto_multibuf.drawio  ex_netproto_refresh.drawio  ex_netproto_timesync.drawio  ex_overview.adoc  ex_overview.txt  freebsd_notes.adoc  getting_started_tutorial.adoc  hpux_notes.adoc  macos_notes.adoc  migration_tuxedo.adoc  migration_tuxedo_network.drawio  migration_tuxedo_process.drawio  module_dependency.dia  osx_notes.adoc  (+13 more)
enctools/: CMakeLists.txt  exdecrypt.c  exencrypt.c
include/: CMakeLists.txt  Excompat  Excompat.h  Exfields  Exfields.h  Usysfl32.h  Uunix.h  atmi.h  atmi_cache.h  atmi_int.h  atmi_shm.h  atmi_tls.h  bridge_int.h  cconfig.h  cmd_processor.h  config.h  config.h.in  cpm.h  edbutil.h  eidl.h  evt_mib.h  exaes.h  exassert.h  exatomic.h  exbase64.h  excrypto.h  exdb.h  exenv.h  exenvapi.h  exhash.h  exmemck.h  exnet.h  exparson.h  expluginbase.h  exproto.h  exregex.h  exsha1.h  exsm.h  exstring.h  extest.h  (+91 more)
libatmi/: CMakeLists.txt  atmi.c  atmi_cache.c  atmi_cache_edb.c  atmi_cache_events.c  atmi_cache_init.c  atmi_cache_inval.c  atmi_cache_keygrp.c  atmi_cache_mgt.c  atmi_cache_ops.c  atmi_cache_ubf.c  atmi_tls.c  atmi_tplog.c  atmiutils.c  brsupport.c  cltadmshm.c  cltshm.c  conversation.c  cpmshm.c  ddr_atmi.c  exparson.c  identifiers.c  init.c  multibuf.c  newenv.c  oatmi.c  ondebug.c  onerror.c  oubf.c  qcommon.c  sem.c  shm.c  sysutil.c  tmnull_switch.c  tpcall.c  tpcrypto.c  tperror.c  tpevents.c  tpexport.c  tpimpexp.c  (+24 more)
libatmiclt/: CMakeLists.txt  cltlib.c  sympull.c
libatmisrv/: CMakeLists.txt  atmisrvinteg.pc.in  dum.c  dynadv.c  init.c  integra.c  ndrxdapi.c  nomain.c  oatmisrv.c  oatmisrv_integra.c  pollextension.c  rawmain.c  rawmain_integra.c  serverapi.c  srv_int.h  srvmain.c  standard.c  svqdispatch.c  svthreads.c  tpreturn.c
libcgreen/: CMakeLists.txt  assertions.c  cdash_reporter.c  cute_reporter.c  message_formatting.c  messaging.c  mocks.c  posix_cgreen_pipe.c  posix_runner_platform.c  reporter.c  runner.c
libexnet/: CMakeLists.txt  contrack.c  exnet.c  server.c
libnetproto/: CMakeLists.txt  exnetproto.h  pmultibuf.c  proto.c  pview.c  pxatmibuf.c
libnstd/: CMakeLists.txt  benchmark.c  cconfig.c  cid.c  crc32.c  crypto.c  dmn.c  edbutil.c  emb.c  exaes.c  exbase64.c  expluginbase.c  exregex.c  exsha1.c  exsm.c  fmemopen-funopen.c  fpalloc.c  ini.c  inicfg.c  lcf.c  lcf_api.c  linearhash.c  msgsizemax.c  nclopt.c  ndebug.c  ndebugfd.c  nerror.c  nstd_sem.c  nstd_shm.c  nstd_shmsv.c  nstd_tls.c  nstdutil.c  nstopwatch.c  ntimer.c  platform.c  rbtree.c  singlegrp.c  stdcfgstr.c  strtokblk.c  sys_aix.c  (+25 more)
libthpool/: CMakeLists.txt  thpool.c
libtux/: CMakeLists.txt  dum.c
libubf/: CMakeLists.txt  b_readwrite.c  bcmp.c  bprint_impl.c  cf.c  cf.h  expr.h  expr.l  expr.y  expr_funcs.c  fdatatype.c  ferror.c  fielddb.c  fieldtable.c  find_impl.c  fld_ptr.c  fld_ubf.c  fld_view.c  fmerge.c  fml.c  fproj_impl.c  get_impl.c  recursive.c  ubf.c  ubf_impl.c  ubf_impl.h  ubf_tls.c  utils.c  utils.h  view_access.c  view_cmp.c  view_null.c  view_parser.c  view_plot.c  view_print.c  view_struct.c  view_ubf.c
ndrxd/: CMakeLists.txt  admerror.c  appconfig.c  bridge.c  ckserver.sh  cmd_adv.c  cmd_appconfig.c  cmd_at.c  cmd_blist.c  cmd_bridge.c  cmd_config.c  cmd_dping.c  cmd_env.c  cmd_ping.c  cmd_ppm.c  cmd_pq.c  cmd_processor.c  cmd_psc.c  cmd_readv.c  cmd_reload.c  cmd_reply.c  cmd_shm_psrv.c  cmd_shm_psvc.c  cmd_srvinfo.c  cmd_startstop.c  cmd_unadv.c  ddr_ndrxd.c  ddr_range.l  ddr_range.y  ndrxd.c  ndrxd_chkdown.sh  newenv.c  pmodel.c  reloadonchange.c  respawn.c  restart.c  sanity.c  sanity_sysv.c  svc_q_remove.c
tmqueue/: CMakeLists.txt  background.c  corhandle.c  forward.c  fwdstat.c  fwdsync.c  housekeep.c  inflight.c  q_disk.c  qdisk_xa.c  qdisk_xa.h  qdisk_xa_common.c  qdisk_xa_common.h  qdisk_xa_d.c  qdisk_xa_s.c  qdisk_xa_util.c  qspace.c  qtran.c  qtran.h  rbtsupp.c  store_files_tmq.c  tmqapi.c  tmqd.h  tmqsrvmain.c  tmqueue.c  tmqueue.h  tmqutil.c  transactions.c
tmsrv/: CMakeLists.txt  background.c  btid.c  local.c  log.c  statedrv.c  store_files.c  tmapi.c  tmrecover.c  tmrecover.h  tmrecovercl.c  tmrecoversv.c  tmsrv.c  tmsrv.h  tmsrvmain.c  xasrvutil.c  xastates.c
tpevsrv/: CMakeLists.txt  tpevsv.c  tpevsv.h
tprecover/: CMakeLists.txt  tprecover.c  tprecover.h
ubftest/: CMakeLists.txt  README  setenv  test.fd.h  test_badd.c  test_bcmp.c  test_bconcat.c  test_bdel.c  test_bjoin.c  test_bnext.c  test_bnum.c  test_bojoin.c  test_bproj.c  test_bupdate.c  test_cbchg.c  test_cbget.c  test_embubf.c  test_expr.c  test_find.c  test_genbuf.c  test_get.c  test_macro.c  test_mem.c  test_mkfldhdr.c  test_mkfldhdr_cmd.sh  test_mkfldhdr_dup.sh  test_mkfldhdr_env.sh  test_mkfldhdr_env_multidir.sh  test_mkfldhdr_err_output.sh  test_mkfldhdr_no_FIELDTBLS.sh  test_mkfldhdr_no_FLDTBLDIR.sh  test_mkfldhdr_syntax_err.sh  test_nstd_atomicadd.c  test_nstd_b64.c  test_nstd_cid.c  test_nstd_crypto.c  (+27 more)
(+1702 files in other folders)
